# Security-Log-Analyzer

./: LICENSE  README.md  __main__.py  detection.py  garbage.txt  main.py  models.py  parser.py  pyproject.toml
sentinal/: __main__.py  detection.py  parser.py
sentinel/: __main__.py  detection.py  models.py  parser.py  ui.py
sentinellog.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
