[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "sentinellog"
version = "1.0.0"
description = "Security Log Analysis and Detection Tool"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "rich"
]

[project.scripts]
sentinellog = "sentinel.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["sentinel*"]